--- a/pom.xml
+++ b/pom.xml
@@ -32,12 +32,6 @@
                     <artifactId>spring-data-jpa</artifactId>
                     <version>2.2.6.RELEASE</version>
                 </dependency>-->
-
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -57,8 +51,25 @@
             <scope>provided</scope>
         </dependency>
 
+        <!--H2 Database-->
+                <dependency>
+                    <groupId>com.h2database</groupId>
+                    <artifactId>h2</artifactId>
+                </dependency>
 
+        <!--ORACLE Database-->
+        <!--        <dependency>
+                    <groupId>com.oracle</groupId>
+                    <artifactId>ojdbc7</artifactId>
+                    <version>12.1.0.1</version>
+                </dependency>-->
 
+        <!--mySQL Database-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.mockito</groupId>
@@ -82,6 +93,7 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
 </project>
